@@ -1,3 +1,8 @@
+2003-11-19  Kevin Vandersloot
+
+	* load-graph.c: Fix the memory display to display the correct memory usage
+	given from libgtop.
+
 2003-11-08  Kevin Vandersloot
 
 	* load-graph.c: Fix the cpu graph showing initial values of zero. Fixes
